--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,25 +20,24 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://experience_vial.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/UI/", "res://scenes/player/", "res://scenes/manager/", "res://scenes/main/", "res://scenes/basic_enemy/", "res://scenes/ability/", "res://scenes/ability/sword_ability_controller/", "res://scenes/ability/sword_ability/", "res://assets/enviornment/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/game_objects/experience_vial/experience_vial.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://scenes/main/", "res://scenes/game_objects/", "res://scenes/game_objects/experience_vial/", "res://assets/", "res://assets/enviornment/")
 dock_1="FileSystem,History"
 dock_3="Scene,Import"
 dock_4="Inspector,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/player/player.tscn", "res://scenes/ability/sword_ability_controller/sword_ability_controller.tscn", "res://scenes/ability/sword_ability/sword_ability.tscn", "res://scenes/manager/arena_time_manager.tscn", "res://scenes/UI/arena_time_ui.tscn", "res://scenes/main/main.tscn", "res://scenes/game_objects/experience_vial/experience_vial.tscn")
+open_scenes=PackedStringArray("res://scenes/game_objects/experience_vial/experience_vial.tscn", "res://scenes/game_objects/player/player.tscn", "res://scenes/main/main.tscn", "res://scenes/manager/experience_manager.tscn", "res://scenes/auto_load/game_events.tscn")
 current_scene="res://scenes/game_objects/experience_vial/experience_vial.tscn"
 center_split_offset=-949
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_main_editor_idx=0
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/manager/arena_time_manager.gd", "res://scenes/UI/arena_time_ui.gd", "res://scenes/basic_enemy/basic_enemy.gd", "res://scenes/manager/enemy_manager.gd", "res://scenes/game_camera/game_camera.gd", "res://scenes/player/player.gd", "res://scenes/ability/sword_ability_controller/sword_ability_controller.gd", "res://scenes/manager/Timer.gd"]
-selected_script="res://scenes/UI/arena_time_ui.gd"
+open_scripts=["res://scenes/manager/arena_time_manager.gd", "res://scenes/UI/arena_time_ui.gd", "res://scenes/game_objects/basic_enemy/basic_enemy.gd", "res://scenes/manager/enemy_manager.gd", "res://scenes/manager/experience_manager.gd", "res://scenes/game_objects/experience_vial/experience_vial.gd", "res://scenes/game_objects/game_camera/game_camera.gd", "res://scenes/auto_load/game_events.gd", "res://scenes/game_objects/player/player.gd", "res://scenes/ability/sword_ability_controller/sword_ability_controller.gd", "res://scenes/manager/Timer.gd"]
+selected_script="res://scenes/game_objects/experience_vial/experience_vial.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
