--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,4 +1,10 @@
 list=Array[Dictionary]([{
+"base": &"Resource",
+"class": &"AbilityUpgrade",
+"icon": "",
+"language": &"GDScript",
+"path": "res://resources/upgrades/ability_upgrade.gd"
+}, {
 "base": &"Node",
 "class": &"HealthComponent",
 "icon": "",
