--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,7 +13,7 @@ dock_split_1=0
 dock_split_2=0
 dock_split_3=0
 dock_hsplit_1=506
-dock_hsplit_2=573
+dock_hsplit_2=622
 dock_hsplit_3=-540
 dock_hsplit_4=0
 dock_filesystem_split=0
@@ -28,8 +28,8 @@ dock_4="Inspector,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/UI/experience_bar.tscn", "res://scenes/main/main.tscn", "res://scenes/manager/experience_manager.tscn")
-current_scene="res://scenes/UI/experience_bar.tscn"
+open_scenes=PackedStringArray("res://scenes/UI/experience_bar.tscn", "res://scenes/main/main.tscn", "res://scenes/manager/experience_manager.tscn", "res://scenes/manager/upgrade_manager.tscn", "res://scenes/UI/upgrade_screen.tscn", "res://scenes/UI/ability_upgrade_card.tscn")
+current_scene="res://scenes/UI/ability_upgrade_card.tscn"
 center_split_offset=-949
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -37,8 +37,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/manager/arena_time_manager.gd", "res://scenes/UI/arena_time_ui.gd", "res://scenes/game_objects/basic_enemy/basic_enemy.gd", "res://scenes/ability/sword_ability/CollisionShape2D.gd", "res://scenes/manager/enemy_manager.gd", "res://scenes/UI/experience_bar.gd", "res://scenes/manager/experience_manager.gd", "res://scenes/game_objects/experience_vial/experience_vial.gd", "res://scenes/game_objects/game_camera/game_camera.gd", "res://scenes/auto_load/game_events.gd", "res://scenes/component/health_component.gd", "res://scenes/component/hitbox_component.gd", "res://scenes/component/hurt_box_component.gd", "res://scenes/game_objects/player/player.gd", "res://scenes/ability/sword_ability/sword_ability.gd", "res://scenes/ability/sword_ability_controller/sword_ability_controller.gd", "res://scenes/manager/Timer.gd", "res://scenes/component/vial_drop_component.gd"]
-selected_script="res://scenes/UI/experience_bar.gd"
+open_scripts=["res://resources/upgrades/ability_upgrade.gd", "res://scenes/UI/ability_upgrade_card.gd", "res://scenes/manager/arena_time_manager.gd", "res://scenes/UI/arena_time_ui.gd", "res://scenes/game_objects/basic_enemy/basic_enemy.gd", "res://scenes/ability/sword_ability/CollisionShape2D.gd", "res://scenes/manager/enemy_manager.gd", "res://scenes/UI/experience_bar.gd", "res://scenes/manager/experience_manager.gd", "res://scenes/game_objects/experience_vial/experience_vial.gd", "res://scenes/game_objects/game_camera/game_camera.gd", "res://scenes/auto_load/game_events.gd", "res://scenes/component/health_component.gd", "res://scenes/component/hitbox_component.gd", "res://scenes/component/hurt_box_component.gd", "res://scenes/game_objects/player/player.gd", "res://scenes/ability/sword_ability/sword_ability.gd", "res://scenes/ability/sword_ability_controller/sword_ability_controller.gd", "res://scenes/manager/Timer.gd", "res://scenes/manager/upgrade_manager.gd", "res://scenes/UI/upgrade_screen.gd", "res://scenes/component/vial_drop_component.gd"]
+selected_script="res://scenes/UI/ability_upgrade_card.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
