--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,8 +20,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/manager/experience_manager.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/UI/", "res://scenes/manager/", "res://scenes/game_objects/", "res://scenes/game_objects/experience_vial/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/UI/upgrade_screen.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/UI/")
 dock_1="FileSystem,History"
 dock_3="Scene,Import"
 dock_4="Inspector,Node"
@@ -29,16 +29,16 @@ dock_4="Inspector,Node"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/UI/experience_bar.tscn", "res://scenes/main/main.tscn", "res://scenes/manager/experience_manager.tscn", "res://scenes/manager/upgrade_manager.tscn", "res://scenes/UI/upgrade_screen.tscn", "res://scenes/UI/ability_upgrade_card.tscn")
-current_scene="res://scenes/UI/ability_upgrade_card.tscn"
+current_scene="res://scenes/manager/upgrade_manager.tscn"
 center_split_offset=-949
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
 open_scripts=["res://resources/upgrades/ability_upgrade.gd", "res://scenes/UI/ability_upgrade_card.gd", "res://scenes/manager/arena_time_manager.gd", "res://scenes/UI/arena_time_ui.gd", "res://scenes/game_objects/basic_enemy/basic_enemy.gd", "res://scenes/ability/sword_ability/CollisionShape2D.gd", "res://scenes/manager/enemy_manager.gd", "res://scenes/UI/experience_bar.gd", "res://scenes/manager/experience_manager.gd", "res://scenes/game_objects/experience_vial/experience_vial.gd", "res://scenes/game_objects/game_camera/game_camera.gd", "res://scenes/auto_load/game_events.gd", "res://scenes/component/health_component.gd", "res://scenes/component/hitbox_component.gd", "res://scenes/component/hurt_box_component.gd", "res://scenes/game_objects/player/player.gd", "res://scenes/ability/sword_ability/sword_ability.gd", "res://scenes/ability/sword_ability_controller/sword_ability_controller.gd", "res://scenes/manager/Timer.gd", "res://scenes/manager/upgrade_manager.gd", "res://scenes/UI/upgrade_screen.gd", "res://scenes/component/vial_drop_component.gd"]
-selected_script="res://scenes/UI/ability_upgrade_card.gd"
+selected_script="res://scenes/manager/upgrade_manager.gd"
 open_help=[]
 script_split_offset=140
 list_split_offset=0
@@ -48,3 +48,13 @@ list_split_offset=0
 open_shaders=[]
 split_offset=0
 selected_shader=""
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=false
+show_search=true
