--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 34,
-"scroll_position": 7.0,
+"row": 38,
+"scroll_position": 25.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,16 +17,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 45,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 55,
 "scroll_position": 34.0,
-"selection": true,
-"selection_from_column": 25,
-"selection_from_line": 55,
-"selection_to_column": 26,
-"selection_to_line": 55,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -259,16 +255,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 70,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 22,
-"scroll_position": 15.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 22,
-"selection_to_column": 6,
-"selection_to_line": 22,
+"row": 20,
+"scroll_position": 13.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -333,10 +325,24 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
+"column": 15,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 4,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/ability/axe_ability/axe_ability.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 5,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
