--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -6,9 +6,13 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 35,
-"scroll_position": 22.0,
-"selection": false,
+"row": 46,
+"scroll_position": 28.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 46,
+"selection_to_column": 2,
+"selection_to_line": 53,
 "syntax_highlighter": "GDScript"
 }
 
@@ -105,7 +109,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 41,
-"scroll_position": 0.0,
+"scroll_position": 15.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -255,11 +259,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 46,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 48,
-"scroll_position": 23.0,
+"row": 44,
+"scroll_position": 19.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -417,11 +421,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 15,
-"scroll_position": 0.0,
+"scroll_position": 10.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -445,10 +449,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
+"row": 21,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
