--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -3,7 +3,7 @@
 dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
-dock_4_selected_tab_idx=1
+dock_4_selected_tab_idx=0
 dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
@@ -20,8 +20,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/UI/main_menu.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/UI/", "res://scenes/game_objects/", "res://scenes/game_objects/wizard_enemy/", "res://scenes/game_objects/experience_vial/", "res://scenes/game_objects/basic_enemy/", "res://scenes/ability/", "res://scenes/ability/sword_ability/", "res://scenes/ability/axe_ability/", "res://resources/", "res://resources/upgrades/", "res://assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/UI/ability_upgrade_card.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/UI/", "res://scenes/manager/", "res://resources/", "res://resources/upgrades/")
 dock_1="FileSystem,History"
 dock_3="Scene,Import"
 dock_4="Inspector,Node"
