--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -29,6 +29,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://scenes/component/hurt_box_component.gd"
 }, {
+"base": &"Resource",
+"class": &"MetaUpgrade",
+"icon": "",
+"language": &"GDScript",
+"path": "res://resources/meta_upgrades/meta_upgrade.gd"
+}, {
 "base": &"Node2D",
 "class": &"SwordAbility",
 "icon": "",
