--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -11,6 +11,12 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://resources/upgrades/ability_upgrade.gd"
 }, {
+"base": &"Area2D",
+"class": &"ArrowAbility",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scenes/ability/arrow_ability/arrow_ability.gd"
+}, {
 "base": &"Node",
 "class": &"HealthComponent",
 "icon": "",
