--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,26 +20,26 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/manager/", "res://scenes/game_objects/", "res://scenes/game_objects/player/", "res://scenes/ability/", "res://scenes/ability/dagger_ability_controller/", "res://scenes/ability/dagger_ability/", "res://scenes/ability/axe_ability/", "res://resources/", "res://resources/upgrades/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/ability/arrow_ability/arrow_ability.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://scenes/", "res://scenes/ability/", "res://scenes/ability/arrow_ability_controller/", "res://scenes/ability/arrow_ability/")
 dock_1="FileSystem,History"
 dock_3="Scene,Import"
 dock_4="Inspector,Node"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/ability/anvil_ability_controller/anvil_ability_controller.tscn", "res://scenes/ability/anvil_ability/anvil_ability.tscn", "res://scenes/ability/dagger_ability/dagger_ability.tscn", "res://scenes/ability/sword_ability_controller/sword_ability_controller.tscn", "res://scenes/ability/dagger_ability_controller/dagger_ability_controller.tscn", "res://scenes/ability/axe_ability_controller/axe_ability_controller.tscn", "res://scenes/ability/axe_ability/axe_ability.tscn", "res://scenes/component/hurt_box_component.tscn", "res://scenes/ability/sword_ability/sword_ability.tscn", "res://scenes/manager/upgrade_manager.tscn", "res://scenes/UI/main_menu.tscn", "res://scenes/main/main.tscn", "res://scenes/game_objects/player/player.tscn")
-current_scene="res://scenes/ability/axe_ability/axe_ability.tscn"
+open_scenes=PackedStringArray("res://scenes/ability/dagger_ability/dagger_ability.tscn", "res://scenes/ability/anvil_ability/anvil_ability.tscn", "res://scenes/game_objects/player/player.tscn", "res://scenes/ability/dagger_ability_controller/dagger_ability_controller.tscn", "res://scenes/manager/upgrade_manager.tscn", "res://scenes/game_objects/basic_enemy/basic_enemy.tscn", "res://scenes/ability/arrow_ability_controller/arrow_ability_controller.tscn", "res://scenes/ability/arrow_ability/arrow_ability.tscn")
+current_scene="res://scenes/ability/arrow_ability_controller/arrow_ability_controller.tscn"
 center_split_offset=-949
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/ability/anvil_ability/anvil_ability.gd", "res://scenes/ability/anvil_ability_controller/anvil_ability_controller.gd", "res://scenes/manager/arena_time_manager.gd", "res://scenes/ability/axe_ability/axe_ability.gd", "res://scenes/ability/axe_ability_controller/axe_ability_controller.gd", "res://scenes/game_objects/basic_enemy/basic_enemy.gd", "res://scenes/game_objects/bat_enemy/bat_enemy.gd", "res://scenes/ability/dagger_ability/dagger_ability.gd", "res://scenes/ability/dagger_ability_controller/dagger_ability_controller.gd", "res://scenes/manager/enemy_manager.gd", "res://scenes/component/health_component.gd", "res://scenes/component/hitbox_component.gd", "res://scenes/component/hit_flash_component.gd", "res://scenes/component/hurt_box_component.gd", "res://scenes/main/main.gd", "res://scenes/UI/main_menu.gd", "res://scenes/UI/meta_menu.gd", "res://scenes/auto_load/meta_progression.gd", "res://resources/meta_upgrades/meta_upgrade.gd", "res://scenes/UI/meta_upgrade_card.gd", "res://scenes/game_objects/player/player.gd", "res://scenes/ability/sword_ability/sword_ability.gd", "res://scenes/ability/sword_ability_controller/sword_ability_controller.gd", "res://scenes/manager/upgrade_manager.gd", "res://scenes/component/velocity_component.gd", "res://scenes/game_objects/wizard_enemy/wizard_enemy.gd"]
-selected_script="res://scenes/ability/axe_ability/axe_ability.gd"
-open_help=["Array", "CollisionShape2D", "Node", "Object", "Tween"]
+open_scripts=["res://resources/upgrades/ability_upgrade.gd", "res://scenes/ability/anvil_ability/anvil_ability.gd", "res://scenes/ability/anvil_ability_controller/anvil_ability_controller.gd", "res://scenes/manager/arena_time_manager.gd", "res://scenes/ability/arrow_ability/arrow_ability.gd", "res://scenes/ability/arrow_ability_controller/arrow_ability_controller.gd", "res://scenes/ability/axe_ability/axe_ability.gd", "res://scenes/ability/axe_ability_controller/axe_ability_controller.gd", "res://scenes/game_objects/basic_enemy/basic_enemy.gd", "res://scenes/game_objects/bat_enemy/bat_enemy.gd", "res://scenes/ability/dagger_ability/dagger_ability.gd", "res://scenes/ability/dagger_ability_controller/dagger_ability_controller.gd", "res://scenes/component/death_component.gd", "res://scenes/manager/enemy_manager.gd", "res://scenes/component/health_component.gd", "res://scenes/component/hitbox_component.gd", "res://scenes/component/hit_flash_component.gd", "res://scenes/component/hurt_box_component.gd", "res://scenes/main/main.gd", "res://scenes/UI/main_menu.gd", "res://scenes/UI/meta_menu.gd", "res://scenes/auto_load/meta_progression.gd", "res://resources/meta_upgrades/meta_upgrade.gd", "res://scenes/UI/meta_upgrade_card.gd", "res://scenes/game_objects/player/player.gd", "res://scenes/ability/sword_ability/sword_ability.gd", "res://scenes/ability/sword_ability_controller/sword_ability_controller.gd", "res://scenes/manager/upgrade_manager.gd", "res://scenes/component/velocity_component.gd", "res://scenes/game_objects/wizard_enemy/wizard_enemy.gd"]
+selected_script="res://scenes/ability/arrow_ability_controller/arrow_ability_controller.gd"
+open_help=["@GlobalScope", "Array", "CharacterBody2D", "CollisionShape2D", "Node", "Node2D", "Object", "Tween"]
 script_split_offset=398
 list_split_offset=0
 
