--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -23,6 +23,18 @@ list=Array[Dictionary]([{
 "language": &"GDScript",
 "path": "res://scenes/component/disposable_hitbox_component.gd"
 }, {
+"base": &"Area2D",
+"class": &"ExplosionComponent",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scenes/component/explosion_component.gd"
+}, {
+"base": &"Node2D",
+"class": &"ExplosiveArrowAbility",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scenes/ability/explosive_arrow_ability/explosive_arrow_ability.gd"
+}, {
 "base": &"Node",
 "class": &"HealthComponent",
 "icon": "",
